--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy": "https://button-bot-client.glitch.me",
+  "proxy": "https://button-bot-client.glitch.me/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
